# junit-airgap

./: .dockerignore  .editorconfig  .env.example  .gitignore  BYTEBUDDY_DNS_INTERCEPTION_PLAN.md  CHANGELOG.md  CLAUDE.md  COMMONTEST_FINDINGS.md  COMPILER_PLUGIN_DESIGN.md  CONTRIBUTING.md  IOS_IMPLEMENTATION_PROGRESS.md  JUNIT4_VS_JUNIT5_COMMONTEST.md  JVMTI_DNS_INTERCEPTION_LIMITATION.md  Makefile  PUBLISHING.md  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
benchmark/: build.gradle.kts
benchmark-common/: build.gradle.kts
benchmark-control/: build.gradle.kts
benchmark-treatment/: build.gradle.kts
benchmarks/: gradle.properties  settings.gradle.kts
benchmarks/benchmark-common/: build.gradle.kts
benchmarks/benchmark-control/: build.gradle.kts
benchmarks/benchmark-treatment/: build.gradle.kts
build-logic/: settings.gradle.kts
build-logic/benchmark-support/: build.gradle.kts
build-logic/benchmark-support/src/main/kotlin/: BenchmarkComparison.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: junit-extensions.kotlin-common-convention.gradle.kts  junit-extensions.kotlin-jvm-convention.gradle.kts  junit-extensions.kotlin-multiplatform-convention.gradle.kts  junit-extensions.plugin-integration-test-convention.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: BenchmarkComparison.kt
docker/linux-arm64/: Dockerfile
docker/linux-x86-64/: Dockerfile
docs/: advanced-configuration.md  compatibility-matrix.md  docker-local-testing.md  migration-java24.md
docs/architecture/: java-version-compatibility.md  jvmti-loading.md
docs/clients/: ktor.md  okhttp.md  retrofit.md
docs/investigation/: IOS_SUPPORT_INVESTIGATION.md  README.md  macos-ci-failures.md
docs/setup-guides/: android-junit4.md  gradle-plugin.md  jvm-junit4.md  jvm-junit5.md  kmp-junit4.md  kmp-junit5.md
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
integration-test-app/: build.gradle.kts
integration-test-app/src/androidMain/: AndroidManifest.xml
integration-test-app/src/jvmTest/resources/: junit-platform.properties
junit-airgap/: build.gradle.kts
junit-airgap/src/nativeInterop/cinterop/: AirgapURLProtocol.h  AirgapURLProtocol.m  airgap.def
junit-extensions-build/: build.gradle.kts  gradle.properties  settings.gradle.kts
junit-extensions-build/gradle-plugin/: build.gradle.kts
junit-extensions-build/junit-no-network/: build.gradle.kts
junit-extensions-build/native/include/: agent.h
junit-extensions-build/native/src/: socket_interceptor.cpp
junit-extensions-build/native/test/: SocketInterceptTest.java
junit-no-network/: build.gradle.kts
native/: .gitignore  CMakeLists.txt
native-ios/: build-lib.sh
native-ios/src/: AirgapURLProtocol.h  AirgapURLProtocol.m
native-ios/test/: URLProtocolTest.m
native/include/: agent.h
native/src/: agent.cpp  dns_interceptor.cpp  socket_interceptor.cpp
native/test/: AgentLoadTest.java  PropertyTest.java  SocketInterceptTest.java
plugin-integration-test/: build.gradle.kts
plugin-integration-test/src/androidMain/: AndroidManifest.xml
plugin-integration-tests/: build.gradle.kts  settings.gradle.kts
plugin-integration-tests/android-junit4/: build.gradle.kts
plugin-integration-tests/android-junit5/: build.gradle.kts
plugin-integration-tests/android-robolectric/: build.gradle.kts
plugin-integration-tests/jvm-junit4/: build.gradle.kts
plugin-integration-tests/jvm-junit4-apply-all/: build.gradle.kts
plugin-integration-tests/jvm-junit5/: build.gradle.kts
plugin-integration-tests/jvm-junit5-allowed-hosts/: build.gradle.kts
plugin-integration-tests/jvm-junit5-apply-all/: build.gradle.kts
plugin-integration-tests/jvm-junit5-blocked-hosts/: build.gradle.kts
plugin-integration-tests/kmp-junit4/: build.gradle.kts
plugin-integration-tests/kmp-junit5/: build.gradle.kts
plugin-integration-tests/kmp-kotlintest/: build.gradle.kts
plugin-integration-tests/kmp-kotlintest-junit5/: build.gradle.kts
plugin-integration-tests/test-contracts/: README.md  build.gradle.kts
(+361 files in other folders)
